--- a/login/src/index.html
+++ b/login/src/index.html
@@ -1,13 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>login</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" href="assets/images-removebg-preview.ico" type="image/x-icon">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>ECOIT</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="shortcut icon"
+      href="https://devwork.vn/_ipx/f_webp/https://static.devworks.jp/images/company/WwqXKuSXyUrkroZM4rmxNPtEFfrKDhP8u7wJXFCS.png" type="image/x-icon"/>
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
